--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "oussama",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
+    "ejs-lint": "^1.2.2",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.3",
