--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "oussama",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
@@ -18,6 +19,9 @@
     "express-session": "^1.17.3",
     "joi": "^17.5.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   }
 }
