--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "cloudinary": "^1.30.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "ejs-lint": "^1.2.2",
     "ejs-mate": "^3.0.0",
@@ -20,6 +22,8 @@
     "joi": "^17.5.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.6",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
