--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "oussama",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.13.4",
     "axios": "^0.27.2",
     "cloudinary": "^1.30.1",
     "connect-flash": "^0.1.1",
